Writing GlobalExceptionHandler unit tests